--- a/main.html
+++ b/main.html
@@ -2,9 +2,96 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <link rel="stylesheet" href="style.css">
+    <title>예금 상품 금리 비교 및 계산</title>
   </head>
   <body>
-    
+    <h1>예금 상품 금리 비교 및 계산</h1>
+    <div class="bankSel">
+      <ul class="list">
+        <li>
+          <input type="checkbox" name="AllCheck" id="AllCheck">
+          <span><label for="AllCheck">전체</label></span>
+        </li>
+      </ul>
+      <ul class="list">
+        <li>
+          <input type="checkbox" name="bankSel1" id="bankSel1">
+          <span><label for="bankSel1">KDB산업은행</label></span>
+        </li>
+        <li>
+          <input type="checkbox" name="bankSel2" id="bankSel2">
+          <span><label for="bankSel2">NH농협은행</label></span>
+        </li>
+        <li>
+          <input type="checkbox" name="bankSel3" id="bankSel3">
+          <span><label for="bankSel3">신한은행</label></span>
+        </li>
+        <li>
+          <input type="checkbox" name="bankSel4" id="bankSel4">
+          <span><label for="bankSel4">우리은행</label></span>
+        </li>
+        <li>
+          <input type="checkbox" name="bankSel5" id="bankSel5">
+          <span><label for="bankSel5">스탠다드차타드은행</label></span>
+        </li>
+        <li>
+          <input type="checkbox" name="bankSel6" id="bankSel6">
+          <span><label for="bankSel6">하나은행</label></span>
+        </li>
+      </ul>
+      <ul class="list">
+        <li>
+          <input type="checkbox" name="bankSel7" id="bankSel7">
+          <span><label for="bankSel7">IBK기업은행</label></span>
+        </li>
+        <li>
+          <input type="checkbox" name="bankSel8" id="bankSel8">
+          <span><label for="bankSel8">KB국민은행</label></span>
+        </li>
+        <li>
+          <input type="checkbox" name="bankSel9" id="bankSel9">
+          <span><label for="bankSel9">한국씨티은행</label></span>
+        </li>
+        <li>
+          <input type="checkbox" name="bankSel10" id="bankSel10">
+          <span><label for="bankSel10">SH수협은행</label></span>
+        </li>
+        <li>
+          <input type="checkbox" name="bankSel11" id="bankSel11">
+          <span><label for="bankSel11">DGB대구은행</label></span>
+        </li>
+        <li>
+          <input type="checkbox" name="bankSel12" id="bankSel12">
+          <span><label for="bankSel12">BNK부산은행</label></span>
+        </li>
+      </ul>
+      <ul class="list">
+        <li>
+          <input type="checkbox" name="bankSel7" id="bankSel13">
+          <span><label for="bankSel7">광주은행</label></span>
+        </li>
+        <li>
+          <input type="checkbox" name="bankSel8" id="bankSel14">
+          <span><label for="bankSel8">제주은행</label></span>
+        </li>
+        <li>
+          <input type="checkbox" name="bankSel9" id="bankSel15">
+          <span><label for="bankSel9">전북은행</label></span>
+        </li>
+        <li>
+          <input type="checkbox" name="bankSel10" id="bankSel16">
+          <span><label for="bankSel10">BNK경남은행</label></span>
+        </li>
+        <li>
+          <input type="checkbox" name="bankSel11" id="bankSel17">
+          <span><label for="bankSel11">케이뱅크은행</label></span>
+        </li>
+        <li>
+          <input type="checkbox" name="bankSel12" id="bankSel18">
+          <span><label for="bankSel12">카카오뱅크</label></span>
+        </li>
+      </ul>
+    </div>
   </body>
 </html>
